feat: Added cron workflow statistics to workflow templates
